--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
