--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,13 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-auth": "^0.0.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-random": "~12.2.0",
+    "expo-secure-store": "~11.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
+    "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -37,10 +43,10 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "session": "^0.1.0",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4",
-    "expo-image-picker": "~13.1.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
