--- a/client/package.json
+++ b/client/package.json
@@ -1,56 +1,55 @@
 {
-  "name": "pf-fixy",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-material/core": "^1.3.7",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/material-bottom-tabs": "^6.2.2",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
-    "@react-navigation/stack": "^6.2.2",
-    "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-auth": "^0.0.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-random": "~12.2.0",
-    "expo-secure-store": "~11.2.0",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
-    "expo-web-browser": "~10.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-paper": "^4.12.3",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2",
-    "react-router": "^6.3.0",
-    "react-router-native": "^6.3.0",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "session": "^0.1.0",
-    "styled-components": "^5.3.5",
-    "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "prettier": "^2.7.1"
-  },
-  "private": true
+	"name": "pf-fixy",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@react-native-community/masked-view": "^0.1.11",
+		"@react-native-material/core": "^1.3.7",
+		"@react-navigation/bottom-tabs": "^6.3.2",
+		"@react-navigation/material-bottom-tabs": "^6.2.2",
+		"@react-navigation/native": "^6.0.11",
+		"@react-navigation/native-stack": "^6.7.0",
+		"@react-navigation/stack": "^6.2.2",
+		"axios": "^0.27.2",
+		"expo": "~45.0.0",
+		"expo-image-picker": "~13.1.1",
+		"expo-random": "~12.2.0",
+		"expo-secure-store": "~11.2.0",
+		"expo-status-bar": "~1.3.0",
+		"expo-updates": "~0.13.3",
+		"expo-web-browser": "~10.2.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-native": "0.68.2",
+		"react-native-gesture-handler": "~2.2.1",
+		"react-native-paper": "^4.12.3",
+		"react-native-reanimated": "~2.8.0",
+		"react-native-safe-area-context": "4.2.4",
+		"react-native-screens": "~3.11.1",
+		"react-native-svg": "12.3.0",
+		"react-native-svg-transformer": "^1.0.0",
+		"react-native-web": "0.17.7",
+		"react-redux": "^8.0.2",
+		"react-router": "^6.3.0",
+		"react-router-native": "^6.3.0",
+		"redux": "^4.2.0",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.1",
+		"styled-components": "^5.3.5",
+		"use-sync-external-store": "^1.2.0",
+		"web-vitals": "^2.1.4",
+		"expo-auth-session": "~3.6.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"prettier": "^2.7.1"
+	},
+	"private": true
 }
