--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/exo-2": "^0.2.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -19,6 +20,8 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -39,8 +42,7 @@
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4",
-    "expo-image-picker": "~13.1.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
