--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,14 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-auth-session": "^3.6.1",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
+    "expo-random": "^12.2.0",
+    "expo-secure-store": "^11.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "^0.13.3",
+    "expo-web-browser": "^10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
