--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "expo-web-browser": "^10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-calendar-api": "^2.0.3",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1285.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
