--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1285.0",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
