--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.3",
     "expo-web-browser": "^10.2.1",
+    "firebase": "^9.9.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-calendar-api": "^2.0.3",
