--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 DB_USER =postgres
-DB_PASSWORD =postgres
+DB_PASSWORD =ikercasillas
 DB_HOST =localhost:5432
 
 GOOGLE_CLIENT_ID = 302940809798-fu5rnn4fj8njf65m40f2062l5os82ob6.apps.googleusercontent.com
