--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "expo-auth-session": "^3.6.1",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
+    "expo-notifications": "^0.15.4",
     "expo-random": "^12.2.0",
     "expo-secure-store": "^11.2.0",
     "expo-status-bar": "~1.3.0",
@@ -54,7 +55,8 @@
     "rn-range-slider": "^2.1.1",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "expo-device": "~4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
