--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-auth-session": "^3.6.1",
+    "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-notifications": "^0.15.4",
@@ -46,6 +47,7 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7",
+    "react-native-webview": "^11.23.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-native": "^6.3.0",
@@ -55,8 +57,7 @@
     "rn-range-slider": "^2.1.1",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4",
-    "expo-device": "~4.2.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
