--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,7 @@
     "nodemon": "^2.0.19"
   },
   "scripts": {
-    "start": "nodemon -L",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
