--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,7 @@
 DB_USER =postgres
-DB_PASSWORD =200398
+DB_PASSWORD =ikercasillas
 DB_HOST =localhost:5432
+PORT = 3000
 
 GOOGLE_CLIENT_ID = 302940809798-fu5rnn4fj8njf65m40f2062l5os82ob6.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
