--- a/client/app.json
+++ b/client/app.json
@@ -23,7 +23,8 @@
 			"adaptiveIcon": {
 				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#FFFFFF"
-			}
+			},
+			"package":"com.pg.fixy"
 		},
 		"web": {
 			"favicon": "./assets/favicon.png"
