--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,8 @@
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
     "web-vitals": "^2.1.4",
-    "expo-device": "~4.2.0"
+    "expo-device": "~4.2.0",
+    "expo-google-sign-in": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
