--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "ioredis": "^4.19.2",
