--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,14 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-auth-session": "^3.6.1",
+    "expo-constants": "^13.2.3",
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
+    "expo-google-sign-in": "~10.2.0",
     "expo-image-picker": "~13.1.1",
+    "expo-location": "^14.3.0",
     "expo-notifications": "^0.15.4",
+    "expo-permissions": "^13.2.0",
     "expo-random": "^12.2.0",
     "expo-secure-store": "^11.2.0",
     "expo-status-bar": "~1.3.0",
@@ -57,8 +61,7 @@
     "rn-range-slider": "^2.1.1",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4",
-    "expo-google-sign-in": "~10.2.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
