--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "expo-updates": "^0.13.3",
     "expo-web-browser": "^10.2.1",
     "firebase": "^9.6.11",
+    "native-notify": "^3.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-calendar-api": "^2.0.3",
