--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "expo": "~45.0.0",
     "expo-auth-session": "^3.6.1",
     "expo-constants": "^13.2.3",
+    "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-google-sign-in": "~10.2.0",
@@ -43,11 +44,13 @@
     "react-google-calendar-api": "^2.0.3",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1285.0",
+    "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-image-gallery": "^2.1.5",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
+    "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
@@ -63,7 +66,8 @@
     "rn-range-slider": "^2.1.1",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-native-community/datetimepicker": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
