--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/material-bottom-tabs": "^6.2.2",
+    "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
@@ -56,6 +57,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.23.0",
     "react-redux": "^8.0.2",
@@ -67,7 +69,8 @@
     "rn-range-slider": "^2.1.1",
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-native-pager-view": "5.4.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
