--- a/api/package.json
+++ b/api/package.json
@@ -34,7 +34,8 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch src src/index.js"
   },
   "keywords": [],
   "author": "",
