--- a/client/package.json
+++ b/client/package.json
@@ -70,7 +70,8 @@
     "styled-components": "^5.3.5",
     "use-sync-external-store": "^1.2.0",
     "web-vitals": "^2.1.4",
-    "react-native-pager-view": "5.4.15"
+    "react-native-pager-view": "5.4.15",
+    "expo-linear-gradient": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
